Replace `Arrays.asList` with `List.of`