@@ -22,7 +22,6 @@ import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
 import org.ballerinalang.langserver.completions.SnippetCompletionItem;
 import org.ballerinalang.langserver.completions.util.Snippet;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -32,7 +31,7 @@ import java.util.stream.Collectors;
 public class QueryExpressionUtil {
 
     public static List<LSCompletionItem> getCommonKeywordCompletions(BallerinaCompletionContext context) {
-        return Arrays.asList(
+        return List.of(
                 new SnippetCompletionItem(context, Snippet.KW_WHERE.get()),
                 new SnippetCompletionItem(context, Snippet.KW_LET.get()),
                 new SnippetCompletionItem(context, Snippet.CLAUSE_LET.get()),
