@@ -576,8 +576,8 @@ public class BMainInstance implements BMain {
             String tempBalHome = new File("src" + File.separator + "test" + File.separator +
                     "resources" + File.separator + "ballerina.home").getAbsolutePath();
             runCmdSet.add("-Dballerina.home=" + tempBalHome);
-            runCmdSet.addAll(Arrays.asList("-jar", jarPath));
-            runCmdSet.addAll(Arrays.asList(args));
+            runCmdSet.addAll(List.of("-jar", jarPath));
+            runCmdSet.addAll(List.of(args));
 
             ProcessBuilder processBuilder = new ProcessBuilder(runCmdSet).directory(new File(commandDir));
             Map<String, String> env = processBuilder.environment();
