@@ -28,7 +28,7 @@ import org.testng.annotations.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Wait for all workers related tests.
@@ -41,7 +41,7 @@ public class WaitForAllWorkersTest {
     @BeforeClass
     public void setup() {
         this.result = BCompileUtil.compile("test-src/workers/wait_for_all_workers.bal");
-        Assert.assertEquals(result.getErrorCount(), 0, Arrays.asList(result.getDiagnostics()).toString());
+        Assert.assertEquals(result.getErrorCount(), 0, List.of(result.getDiagnostics()).toString());
     }
 
     @Test(description = "Test to see if worker continues to run even when default worker has finished")
